--- a/HTML5-INTRO/styles/nav2.css
+++ b/HTML5-INTRO/styles/nav2.css
@@ -1,6 +1,10 @@
+
+nav > ul{
+    display: flex;
+}
+
 nav li{
     list-style: none;
-    display: inline;
     margin-right: 10px;
     padding: 0 10px; /* this padding will work on hover area */
 }
@@ -12,4 +16,17 @@ nav li:hover{
 nav li a{
     text-decoration: none;
     color: black;
+}
+
+/* Nested Menu */
+
+nav li .dropdown{
+    display: none;
+    position: absolute;
+    background-color: lightsalmon;
+    padding-left: 0;
+}
+
+nav li:hover > .dropdown{
+    display: block;
 }
