--- a/Developer-Portfolio/styles/portfolio.css
+++ b/Developer-Portfolio/styles/portfolio.css
@@ -4,9 +4,23 @@
 }
 
 /* header and navigation styles */
+nav{
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 200px;
+}
 .nav-title{
     font-weight: 800;
     font-size: 45px;
+}
+
+nav ul{
+    display: flex;
+}
+
+nav li{
+    list-style: none;
+    margin-left: 50px;
 }
 
 .text-primary{
