little code added

--- a/Developer-Portfolio/styles/portfolio2.css
+++ b/Developer-Portfolio/styles/portfolio2.css
@@ -173,3 +173,24 @@ section{
  
  
 /* resume section */
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+
+.resume .title{
+    color: #474747;
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.resume .description{
+    color: #757575;
+
+}
