--- a/Developer-Portfolio/styles/portfolio3.css
+++ b/Developer-Portfolio/styles/portfolio3.css
@@ -205,3 +205,17 @@ section{
     margin-top: 50px;
     text-align: center;
 }
+
+/* contact styles */
+
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+
+
+.contact .section-title{
+    text-align: left;
+}
