--- a/Developer-Portfolio/styles/portfolio3.css
+++ b/Developer-Portfolio/styles/portfolio3.css
@@ -15,14 +15,31 @@
     font-weight: 700;
     font-size: 20px;
     border: 0;
-    padding: 18px 35px;
+    padding: 18px 30px;
     height: 64px;
     border-radius: 5px;
     background: #FD6E0A;
+    gap: 20px;
 
-    
- 
 }
+
+.btn-primary-contact-button {
+    color: #FD6E0A;
+    font-weight: 700;
+    font-size: 20px;
+    border: 0;
+    padding: 18px 30px;
+    height: 64px;
+    border-radius: 5px;
+    background: transparent;
+    border: 2px solid #FD6E0A;
+    gap: 20px;
+    margin-left: 20px;
+
+ }
+
+
+
  
 /* used for the whole background part */
 .header{
