--- a/Developer-Portfolio/styles/portfolioMedia.css
+++ b/Developer-Portfolio/styles/portfolioMedia.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 
 *{
     margin: 0;
@@ -314,4 +318,13 @@ img{
   .banner-sub-title {
     font-size: 25px;
   }
+}
+
+@media (max-width: 600px) {
+    .banner {
+        margin: 0 10px;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
